--- a/bed/index.html
+++ b/bed/index.html
@@ -16,15 +16,15 @@
     <meta property="og:image" content="img/preview-social-link/preview-social-link.png">
     <meta property="vk:image" content="img/preview-social-link/preview-vk-link.png">
     <!--Critical styles BEGIN-->
-    <link rel="stylesheet" href="styles/critical-styles.css" inline>
+    <style>.cart{position:fixed;top:0;right:0;width:90px;height:50px;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;background-color:#ff7c3b;font-size:16px;cursor:pointer;-webkit-transition:.3s;-o-transition:.3s;transition:.3s;z-index:5}.cart:hover,.navbar__list-link:hover{background-color:#ff5a08}.cart__icon{width:23px;height:auto}.cart__count{color:#fff;margin-left:8px}.navbar{position:fixed;top:0;left:0;height:100%;font-size:14px;width:8.125em;background-color:#ff7c3b;text-align:center;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;z-index:5}.navbar_visible{opacity:1!important;visibility:visible!important}.navbar__list-item{margin-bottom:16px}.navbar__list-link{padding:18px 10px;background-color:#ff7c3b;display:block;-webkit-transition:.3s;-o-transition:.3s;transition:.3s}.navbar__list-link-icon{display:block;margin:0 auto 6px;width:28px;height:28px;-o-object-fit:contain;object-fit:contain;-o-object-position:center;object-position:center}.navbar__list-link-text{display:block;color:#fff;font-family:Geometria-B,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";line-height:1.2}.header{font-size:16px;padding-top:3.5em;position:relative;z-index:1}.header .header__logo,.header__nav{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}.header .header__logo,.header__inner,.header__nav{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}.header__inner,.header__nav{-webkit-box-align:start;-webkit-align-items:flex-start;-ms-flex-align:start;align-items:flex-start}.header__nav{margin-left:auto;padding-top:.5em}.header__nav-item{margin-left:1.5em}.header__nav-item:first-child{margin-left:0}.header__nav-link{color:#ff7c3b;-webkit-transition:.3s;-o-transition:.3s;transition:.3s}.header__nav-link:hover{color:#000}.header__btn{width:34px;height:24px;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;display:none;cursor:pointer;position:relative}.header__btn-line{width:100%;height:3px;background-color:#ff7c3b;-webkit-transform-origin:50% 50%;-ms-transform-origin:50% 50%;transform-origin:50% 50%;position:absolute;left:50%;-webkit-transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);transform:translate(-50%,-50%);-webkit-transition:.4s;-o-transition:.4s;transition:.4s}.header__btn-line:nth-child(1){top:0}.header__btn-line:nth-child(2){top:calc(50% - 1px)}.header__btn-line:nth-child(3){bottom:0}.header__btn_active .header__btn-line:nth-child(1){top:calc(50% - 2px);-webkit-transform:translate(-50%,0) rotate(-45deg);-ms-transform:translate(-50%,0) rotate(-45deg);transform:translate(-50%,0) rotate(-45deg)}.header__btn_active .header__btn-line:nth-child(3){bottom:calc(50% - 1px);-webkit-transform:translate(-50%,0) rotate(45deg);-ms-transform:translate(-50%,0) rotate(45deg);transform:translate(-50%,0) rotate(45deg)}.header__btn_active .header__btn-line:nth-child(2){opacity:0}@media (min-width:768px){body{opacity:0}}@media (max-width:1500px){.navbar{width:7.5em;font-size:12px}.navbar__list-link{padding:12px 8px}.navbar__list-link-icon{width:24px;height:24px}}@media (max-width:1440px){.header .header__logo-img{width:260px;height:auto}}@media (max-width:1170px){.cart,.navbar{top:auto;bottom:0}.navbar{width:100%;height:calc(100% - 90px);visibility:hidden;opacity:0;-webkit-transition:.5s;-o-transition:.5s;transition:.5s}.navbar__list-item:last-child{margin-bottom:0}.navbar__list-link{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;background-color:transparent;padding:0}.navbar__list-link-icon{margin:0 8px 0 0}.header{padding:15px 0;position:fixed;top:0;left:0;width:100%;z-index:9;-webkit-box-shadow:0 10px 55px rgba(0,92,199,.07);box-shadow:0 10px 55px rgba(0,92,199,.07);background-color:#fff}.header__inner{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between}.header__nav{display:none}.header .header__logo-img{width:220px}.header__btn{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}}@media (max-width:767px){.navbar{height:calc(100% - 70px)}.header .header__logo-img{width:160px}}</style>
     <!--Critical styles END-->
     <!--Critical scripts BEGIN-->
-    <script src="js/critical-scripts.js" inline></script>
+    <script>!function(e){var n={};function t(o){if(n[o])return n[o].exports;var r=n[o]={i:o,l:!1,exports:{}};return e[o].call(r.exports,r,r.exports,t),r.l=!0,r.exports}t.m=e,t.c=n,t.d=function(e,n,o){t.o(e,n)||Object.defineProperty(e,n,{enumerable:!0,get:o})},t.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},t.t=function(e,n){if(1&n&&(e=t(e)),8&n)return e;if(4&n&&"object"==typeof e&&e&&e.__esModule)return e;var o=Object.create(null);if(t.r(o),Object.defineProperty(o,"default",{enumerable:!0,value:e}),2&n&&"string"!=typeof e)for(var r in e)t.d(o,r,function(n){return e[n]}.bind(null,r));return o},t.n=function(e){var n=e&&e.__esModule?function(){return e.default}:function(){return e};return t.d(n,"a",n),n},t.o=function(e,n){return Object.prototype.hasOwnProperty.call(e,n)},t.p="/",t(t.s=19)}({19:function(e,n,t){function o(e){document.documentElement.classList.add(e)}t(20)(function(){document.querySelector("body").classList.add("visible")}),document.documentElement.className=document.documentElement.className.replace("no-js","js"),"ontouchstart"in window?o("touch"):o("no-touch"),"undefined"!=typeof InstallTrigger&&o("firefox"),(/constructor/i.test(window.HTMLElement)||"[object SafariRemoteNotification]"===(!window.safari||"undefined"!=typeof safari&&safari.pushNotification).toString())&&o("safari"),document.documentMode&&o("ie"),!document.documentMode&&window.StyleMedia&&o("edge"),window.chrome&&(window.chrome.webstore||window.chrome.runtime)&&o("chrome"),~navigator.appVersion.indexOf("Win")&&o("windows"),~navigator.appVersion.indexOf("Mac")&&o("osx"),~navigator.appVersion.indexOf("Linux")&&o("linux")},20:function(e,n){e.exports=function(e){window.addEventListener("load",function(){e()})}}});</script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBctr_1U3qL7kuTPAg0qIpT8ylXBJHwSZY"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <!--Critical scripts END-->
     <!--Styles BEGIN-->
-    <link rel="stylesheet" href="styles/bundle.css">
+    <link rel="stylesheet" href="styles/bundle.min.css">
     <!--Styles END-->
   </head>
   <body class="home page">
@@ -64,10 +64,10 @@
         <div class="wrapper">
           <div class="banner__inner">
             <div class="banner__wrap-videos">
-              <video class="banner__video first active" autoplay loop>
+              <video class="banner__video first active" autoplay loop muted>
                 <source src="img/banner_video_1.mp4" type="video/mp4">
               </video>
-              <video class="banner__video second" autoplay loop>
+              <video class="banner__video second" autoplay loop muted>
                 <source src="img/banner_video_2.mp4" type="video/mp4">
               </video>
             </div>
@@ -287,37 +287,37 @@
           <div class="swiper-container slider__inner">
             <div class="swiper-wrapper">
               <div class="slider__item swiper-slide">
-                <video class="slider__item-video" autoplay loop>
+                <video class="slider__item-video" autoplay loop muted>
                   <source src="img/slider_1.mp4" type="video/mp4">
                 </video>
                 <p class="slider__item-text">Мы долго думали, как убедить вас<br> купить своему ребенку кроватку-домик.</p>
               </div>
               <div class="slider__item swiper-slide">
-                <video class="slider__item-video" autoplay loop>
+                <video class="slider__item-video" autoplay loop muted>
                   <source src="img/slider_2.mp4" type="video/mp4">
                 </video>
                 <p class="slider__item-text">Мы долго думали, как убедить вас<br> купить своему ребенку кроватку-домик. Мы долго думали, как убедить вас<br> купить своему ребенку кроватку-домик.</p>
               </div>
               <div class="slider__item swiper-slide">
-                <video class="slider__item-video" autoplay loop>
+                <video class="slider__item-video" autoplay loop muted>
                   <source src="img/slider_3.mp4" type="video/mp4">
                 </video>
                 <p class="slider__item-text">Мы долго думали, как убедить вас<br> купить своему ребенку кроватку-домик купить своему ребенку кроватку-домик.</p>
               </div>
               <div class="slider__item swiper-slide">
-                <video class="slider__item-video" autoplay loop>
+                <video class="slider__item-video" autoplay loop muted>
                   <source src="img/slider_4.mp4" type="video/mp4">
                 </video>
                 <p class="slider__item-text">Мы долго думали, как убедить вас<br> купить своему ребенку кроватку-домик. Мы долго думали, как убедить вас<br> купить своему ребенку кроватку-домик.</p>
               </div>
               <div class="slider__item swiper-slide">
-                <video class="slider__item-video" autoplay loop>
+                <video class="slider__item-video" autoplay loop muted>
                   <source src="img/slider_5.mp4" type="video/mp4">
                 </video>
                 <p class="slider__item-text">Мы долго думали, как убедить вас<br> купить своему ребенку кроватку-домик.</p>
               </div>
               <div class="slider__item swiper-slide">
-                <video class="slider__item-video" autoplay loop>
+                <video class="slider__item-video" autoplay loop muted>
                   <source src="img/slider_6.mp4" type="video/mp4">
                 </video>
                 <p class="slider__item-text">Мы долго думали, как убедить вас<br> купить своему ребенку кроватку-домик купить своему ребенку кроватку-домик купить своему ребенку кроватку-домик</p>
@@ -825,6 +825,6 @@
       </div>
     </footer>
     <!--Footer END-->
-    <script src="js/bundle.js"></script>
+    <script src="js/bundle.min.js"></script>
   </body>
 </html>
